--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 - Add server and watch abilities for dev
 - Add date formatter template func
 - Change markdown post header to a parsable format from the standard lib
+- Sort posts by date
