--- a/TODO
+++ b/TODO
@@ -1,2 +1,2 @@
-- Add date formatter template func
 - Change markdown post header to a parsable format from the standard lib
+- Add inotify to static dir
